main.css
/* FONTS */

@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap'); /* font-family: 'Lato', sans-serif; */
@font-face {
    font-family: 'ROAD MOVIE';
    src: url('fonts/ROADMOVIE.woff2') format('woff2'),
        url('fonts/ROADMOVIE.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
} 

/*ROADMOVIE FONT
for personal use  only
commercial licenses & complete set available
contact
billyargel@gmail.com
visit:
billyargel.blogspot.com*?


/* ELEMENT STYLES */

* {
    box-sizing: border-box;
}

html {
    overflow-x: hidden;
    background-color: #6D9DC5;
}

.wrapper {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    height: 100%;
    align-items: center;
    padding: 0px 10px;
}

.sticky-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: 100%;
    align-items: center;
    padding: 0px 10px;
}

.sticky-actor-profile {
    display: flex;
    flex-direction: row;
    align-items: flex-end;
}

.display-name-sticky {
    padding-left: 5px;
    padding-top: 50px;
}

header {
    background-color: #6D9DC5;
    width: 100%;
}

header.sticky {
    width: 100%;
    position: fixed;
    height: 131.5px;
}

header.homescreen {
    height: 1000px;
}

#header-placeholder {
    width: 100%;
    height: 457px;
    background-color:#6D9DC5;
}

main {
    background-color: #97D8C4;
    min-height: 615px;
    width: 100%;
}

footer {
    background-color: #6D9DC5;
}

div.footer-div {
    padding-bottom: 10px;
}


.section {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 30px;
    
}

.search-element {
    display: flex;
    flex-direction: column;
    align-items: center;
}

input {
    box-shadow: 1px .5px 3px #4075A0;
}

input#search-bar {
    border: none;
    padding: 2px 3px;
}

.actor-profile {
    display: flex;
    flex-direction: column;
    align-items: center; 
    margin-top: 50px;

}

ul#results {
    list-style: none;
    padding: 0px;
}

li.movie-display {
    display: flex;
    flex-direction: row;
    max-width: 800px;
    margin-bottom: 40px;
    padding: 10px 15px;
    background-color: #EFF2F1;
    box-shadow: 1px 1px 5px #389478;

}

div.info-row {
    display: flex;
    flex-direction: row;
    max-width: 600px;
}
   
.text-elements {
    margin-left: 5px;
}

.hidden {
    display: none;
}


/* TEXT STYLES */

h1 {
    font-family: 'Road Movie', serif;
    padding: 5px ;
    text-align: center;
    display: flex;
    font-weight: lighter;
    letter-spacing: 1px;
    margin-bottom: 0px;
    font-size: 50px;
}

h2, h3 {
    font-family: 'Lato', sans-serif;
    text-align: center;
    display: flex;
}

p, input {
    font-family: 'Lato', sans-serif;
    font-weight: lighter
}

#display-name {
    margin-top: 5px;
    margin-bottom: 0px;
}

.title {
    text-align: left;
}

.release-year {
    padding-top: 2px;
}

.genre-tags {
    padding-top: 2px;
    font-weight: normal;
}

#error-message {
    color: red;
    text-align: center;
    margin-top: 5px;
    background-color: white;
}

div.info-row > h3, p {
    margin: 0px;
    padding: 0px 3px;
}

.rating {
    font-weight: bolder;
    border: 1px solid black;
    text-align: center;
    margin-right: 8px;
    margin-left: 2px;

}

.overview {
    margin-top: 5px;
}

footer p {
    text-align: center;
    margin-bottom: 3px;
    padding-top: 15px;
    font-weight: normal;
}

/* IMAGE STYLES */

#profile-pic {
    max-width: 86.66px;
    box-shadow: 1px 1px 3px #4075A0;
}

.poster {
    display: block;
    width: 100px;
    height: 144px;
    box-shadow: 1px 1px 3px #789189;
}

#logo {
    max-height: 10px;
    
}


/* LINK STYLES */

a:link {
    text-decoration: none;
    color: black;
}

a:visited {
    color: black;
}

a:hover {
    color: rgb(121, 121, 121) ;
}

a:active {
    color: rgb(70, 70, 70);
    
}

/* SCREEN SIZE RESPONSIVENESS */

@media all and (min-width: 800px) {
    header.homescreen {
        height: 1000px;
    }

    .wrapper {
        display: flex;
        flex-direction: column;
        justify-content: center;
        height: 100%;
        align-items: center;
        padding: 0px 10px;
    }

    .hidden {
        display: none;
    }

    .sticky-wrapper {
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
        height: 100%;
        align-items: center;
        padding: 0px 10px;
    }
}

@media all and (max-width: 530px) {
    h2 {
        text-align: left;
    }
}

@media all and (max-width: 450px) {
    h2 {
        margin-bottom: 10px ;
    }

    header.sticky {
        width: 100%;
        position: fixed;
        height: 137px;
    }

    #submit {
        margin-top: 5px;
    }

    .sticky-actor-profile {
        margin-top: 5px;
    }

    #header-placeholder {
        width: 100%;
        height: 462.5px;
        background-color:#6D9DC5;
    }
    
}

@media all and (max-width: 375px) {
    .sticky-actor-profile {
        display: none;
    }

}

